[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Game/UI/GameUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/UI/Dialogs/PreviewDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game/UI/ChatBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Game/UI/Dialogs/SaveDialog.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Cabin/Modified/Cabin-Bold-Outline-Large.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Game/UI/Dialogs/RoomDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/Cabin/Modified/Cabin-Regular-Outline.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/Game/UI/Dialogs/NotebookDialog.tscn" type="PackedScene" id=9]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "The UI of the game."
}

[node name="HideableUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="HBoxContainer" parent="HideableUI"]
anchor_right = 1.0
margin_bottom = 26.0
mouse_filter = 2
alignment = 1

[node name="ObjectsButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 207.0
margin_right = 271.0
margin_bottom = 26.0
text = "Objects"

[node name="GamesButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 275.0
margin_right = 335.0
margin_bottom = 26.0
text = "Games"

[node name="RoomButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 339.0
margin_right = 393.0
margin_bottom = 26.0
text = "Room"

[node name="NotebookButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 397.0
margin_right = 476.0
margin_bottom = 26.0
text = "Notebook"

[node name="FlipTableButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 480.0
margin_right = 558.0
margin_bottom = 26.0
text = "Flip Table"

[node name="ClearTableButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 562.0
margin_right = 650.0
margin_bottom = 26.0
text = "Clear Table"

[node name="UndoButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 654.0
margin_right = 705.0
margin_bottom = 26.0
disabled = true
text = "Undo"

[node name="RotationOption" type="OptionButton" parent="HideableUI/TopPanel"]
margin_left = 709.0
margin_right = 761.0
margin_bottom = 26.0
hint_tooltip = "The angle that objects are rotated by around the vertical axis.

To rotate an object while grabbing it, use Alt + Scroll Wheel."
text = "45°"
items = [ "15°", null, false, 0, null, "30°", null, false, 1, null, "45°", null, false, 2, null, "60°", null, false, 3, null, "90°", null, false, 4, null, "180°", null, false, 5, null ]
selected = 2

[node name="GameMenuButton" type="Button" parent="HideableUI/TopPanel"]
margin_left = 765.0
margin_right = 816.0
margin_bottom = 26.0
text = "Menu"

[node name="ChatBox" parent="HideableUI" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_bottom = -20.0

[node name="MultiplayerContainer" type="VBoxContainer" parent="HideableUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 76.0
grow_horizontal = 0
mouse_filter = 2

[node name="RoomCodeLabel" type="RichTextLabel" parent="HideableUI/MultiplayerContainer"]
margin_right = 200.0
margin_bottom = 16.0
mouse_filter = 2
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="RoomCodeVisibleContainer" type="HBoxContainer" parent="HideableUI/MultiplayerContainer"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 46.0
mouse_filter = 2
alignment = 2

[node name="RoomCodeToggleButton" type="Button" parent="HideableUI/MultiplayerContainer/RoomCodeVisibleContainer"]
margin_left = 188.0
margin_right = 200.0
margin_bottom = 26.0

[node name="PlayerListContainer" type="VBoxContainer" parent="HideableUI/MultiplayerContainer"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 50.0
mouse_filter = 2

[node name="ObjectsDialog" parent="." instance=ExtResource( 2 )]
window_title = "Objects"
db_types = {
"CARDS": "cards",
"CONTAINERS": "containers",
"DICE": [ "dice/d4", "dice/d6", "dice/d8", "dice/d10", "dice/d12", "dice/d20" ],
"PIECES": "pieces",
"SPEAKERS": "speakers",
"TIMERS": "timers",
"TOKENS": [ "tokens/cube", "tokens/cylinder" ]
}
load_button_text = "Add"
status_text_one = "Added %s."
status_text_multiple = "Added %d objects."

[node name="GamesDialog" parent="." instance=ExtResource( 2 )]
window_title = "Games"
db_types = {
"GAMES": "games"
}
status_text_multiple = "Loaded %d games."

[node name="RoomDialog" parent="." instance=ExtResource( 7 )]

[node name="NotebookDialog" parent="." instance=ExtResource( 9 )]

[node name="ClearTableConfirmDialog" type="ConfirmationDialog" parent="."]
margin_right = 250.0
margin_bottom = 93.0
rect_min_size = Vector2( 300, 100 )
dialog_text = "Are you sure you want to clear all objects from the table?"
dialog_autowrap = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
__meta__ = {
"_editor_description_": "Used to make sure the children controls are rendered above the CameraController UI elements."
}

[node name="GameMenuBackground" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameMenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameMenuBackground/CenterContainer"]
margin_left = 440.0
margin_top = 212.0
margin_right = 583.0
margin_bottom = 388.0

[node name="BackToGameButton" type="Button" parent="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 26.0
text = "Back to game"

[node name="SaveGameButton" type="Button" parent="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 143.0
margin_bottom = 56.0
text = "Save game"

[node name="LoadGameButton" type="Button" parent="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 143.0
margin_bottom = 86.0
text = "Load game"

[node name="OptionsButton" type="Button" parent="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 143.0
margin_bottom = 116.0
text = "Options"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 143.0
margin_bottom = 146.0
text = "Quit to main menu"

[node name="DesktopButton" type="Button" parent="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 143.0
margin_bottom = 176.0
text = "Quit to desktop"

[node name="SaveDialog" type="WindowDialog" parent="CanvasLayer/GameMenuBackground"]
margin_right = 400.0
margin_bottom = 450.0
window_title = "Load a file"
script = ExtResource( 5 )

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[connection signal="tree_exiting" from="." to="." method="_on_GameUI_tree_exiting"]
[connection signal="pressed" from="HideableUI/TopPanel/ObjectsButton" to="." method="_on_ObjectsButton_pressed"]
[connection signal="pressed" from="HideableUI/TopPanel/GamesButton" to="." method="_on_GamesButton_pressed"]
[connection signal="pressed" from="HideableUI/TopPanel/RoomButton" to="." method="_on_RoomButton_pressed"]
[connection signal="pressed" from="HideableUI/TopPanel/NotebookButton" to="." method="_on_NotebookButton_pressed"]
[connection signal="pressed" from="HideableUI/TopPanel/FlipTableButton" to="." method="_on_FlipTableButton_pressed"]
[connection signal="pressed" from="HideableUI/TopPanel/ClearTableButton" to="." method="_on_ClearTableButton_pressed"]
[connection signal="pressed" from="HideableUI/TopPanel/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="item_selected" from="HideableUI/TopPanel/RotationOption" to="." method="_on_RotationOption_item_selected"]
[connection signal="pressed" from="HideableUI/TopPanel/GameMenuButton" to="." method="_on_GameMenuButton_pressed"]
[connection signal="pressed" from="HideableUI/MultiplayerContainer/RoomCodeVisibleContainer/RoomCodeToggleButton" to="." method="_on_RoomCodeToggleButton_pressed"]
[connection signal="entry_requested" from="ObjectsDialog" to="." method="_on_ObjectsDialog_entry_requested"]
[connection signal="entry_requested" from="GamesDialog" to="." method="_on_GamesDialog_entry_requested"]
[connection signal="requesting_room_details" from="RoomDialog" to="." method="_on_RoomDialog_requesting_room_details"]
[connection signal="setting_lighting" from="RoomDialog" to="." method="_on_RoomDialog_setting_lighting"]
[connection signal="setting_skybox" from="RoomDialog" to="." method="_on_RoomDialog_setting_skybox"]
[connection signal="setting_table" from="RoomDialog" to="." method="_on_RoomDialog_setting_table"]
[connection signal="confirmed" from="ClearTableConfirmDialog" to="." method="_on_ClearTableConfirmDialog_confirmed"]
[connection signal="pressed" from="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer/BackToGameButton" to="." method="_on_BackToGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer/SaveGameButton" to="." method="_on_SaveGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameMenuBackground/CenterContainer/VBoxContainer/DesktopButton" to="." method="_on_DesktopButton_pressed"]
[connection signal="load_file" from="CanvasLayer/GameMenuBackground/SaveDialog" to="." method="_on_SaveDialog_load_file"]
[connection signal="popup_hide" from="CanvasLayer/GameMenuBackground/SaveDialog" to="." method="_on_SaveDialog_popup_hide"]
[connection signal="save_file" from="CanvasLayer/GameMenuBackground/SaveDialog" to="." method="_on_SaveDialog_save_file"]
[connection signal="applying_options" from="CanvasLayer/OptionsMenu" to="." method="_on_OptionsMenu_applying_options"]
